@@ -22,6 +22,8 @@ Usage: scummvm [OPTIONS]... [GAME]\\
   -m, --music-volume=NUM  &Set the music volume, 0-255 (default: 192)\\
   -s, --sfx-volume=NUM    &Set the sfx volume, 0-255 (default: 192)\\
   -r, --speech-volume=NUM  &Set the voice volume, 0-255 (default: 192)\\
+  --midi-gain             &Set the gain for MIDI playback, 0-1000 (default:\\
+                          &100) (only supported by some MIDI drivers)\\
   -n, --subtitles         &Enable subtitles (use with games that have voice)\\
   -b, --boot-param=NUM    &Pass number to the boot script (boot param)\\
   -d, --debuglevel=NUM    &Set debug verbosity level\\
