@@ -109,6 +109,8 @@ The following keywords are recognized:
         sfx\_volume     &number   The sfx volume setting (0-255)\\
         tempo           &number   The music tempo (50-200) (default: 100)\\
         speech\_volume  &number   The speech volume setting (0-255)\\
+        midi\_gain      &number   The MIDI gain (0-1000) (default: 100) (Only\\
+                        &         supported by some MIDI drivers.)\\
 \\
         copy\_protection&bool     Enable copy protection in SCUMM games, when\\
                         &         ScummVM disables it by default.\\
